# all-links

./: .gitignore  README.md  pyproject.toml  requirements
.github/workflows/: python-app.yml
all_links/: __main__.py  cache.py  cli.py  parser.py  printer.py  request.py  requirements  writer.py
all_links/website/: __init__.py  website.py  website_architecture.py
tests/: conftest.py  test_all_links.py  test_parser.py  test_request.py  test_website.py  test_writer.py
