[tool.poetry]
name = "all-links"
version = "0.1.0"
description = ""
authors = ["Rached Mejri <r.mejri74100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
lxml = "^4.5.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
pytest-mock = "^2.0.0"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
